fixed alignment issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -828,6 +828,7 @@ h6,
   }
 
   .box {
+    margin-top: -80px;
     flex-direction: row;
     flex-wrap: nowrap;
     overflow: hidden;
@@ -919,7 +920,7 @@ h6,
     font-size: 1.8rem;
     padding-right: 0;
     margin-top: -50px;
-    padding-left: 15px;
+    /* padding-left: 15px; */
   }
 }
 
